mais correções de encoding

--- a/src/MoneyManager.Web/wwwroot/i18n/pt-BR.json
+++ b/src/MoneyManager.Web/wwwroot/i18n/pt-BR.json
@@ -289,7 +289,7 @@
     "Title": "Configurações",
     "General": "Geral",
     "Language": "Idioma",
-    "LanguageSelector": "Seletor de Idioma","Idioma",
+    "LanguageSelector": "Seletor de Idioma",
     "Currency": "Moeda",
     "Theme": "Tema",
     "Light": "Claro",
