feat: Adicionar label Common.Processing e melhorar Accounts.razor

--- a/src/MoneyManager.Web/wwwroot/i18n/pt-BR.json
+++ b/src/MoneyManager.Web/wwwroot/i18n/pt-BR.json
@@ -1,6 +1,7 @@
 ﻿{
   "Common": {
     "Loading": "Carregando...",
+    "Processing": "Processando...",
     "Cancel": "Cancelar",
     "Save": "Salvar",
     "Create": "Criar",
