ainda sobre encodes

--- a/src/MoneyManager.Web/wwwroot/i18n/pt-BR.json
+++ b/src/MoneyManager.Web/wwwroot/i18n/pt-BR.json
@@ -279,41 +279,110 @@
     "Reports": "Relatórios",
     "Profile": "Meu Perfil",
     "Settings": "Configurações",
-    "Logout": "Sair"
+    "Logout": "Sair",
+    "User": "Usuário"
   },
   "Profile": {
     "PageTitle": "Perfil - MoneyManager",
     "Title": "Meu Perfil",
+    "Subtitle": "Gerencie suas informações pessoais e segurança",
     "PersonalInfo": "Informações Pessoais",
     "FullName": "Nome Completo",
+    "FullNamePlaceholder": "Digite seu nome completo",
     "Email": "Email",
     "Phone": "Telefone",
+    "PhonePlaceholder": "(00) 00000-0000",
     "ProfilePicture": "Foto de Perfil",
+    "ProfilePicturePlaceholder": "https://...",
+    "ProfilePictureHelp": "Cole a URL de uma imagem pública",
+    "ProfilePictureLabel": "URL da Foto de Perfil",
+    "Username": "Nome de Usuário",
+    "UsernameHelp": "Nome de usuário não pode ser alterado",
+    "MemberSince": "Membro desde",
     "ChangePassword": "Alterar Senha",
+    "Security": "Segurança",
+    "SecurityDescription": "Mantenha sua conta segura com uma senha forte",
     "CurrentPassword": "Senha Atual",
     "NewPassword": "Nova Senha",
     "ConfirmNewPassword": "Confirmar Nova Senha",
+    "ConfirmPasswordChange": "Confirmar Alteração",
+    "Changing": "Alterando...",
     "Save": "Salvar",
+    "SaveChanges": "Salvar Alterações",
+    "Saving": "Salvando...",
     "Cancel": "Cancelar",
     "Loading": "Carregando perfil...",
     "ErrorLoading": "Erro ao carregar perfil: {0}",
     "ErrorSaving": "Erro ao salvar: {0}",
-    "SaveSuccess": "Perfil atualizado com sucesso!"
+    "SaveSuccess": "Perfil atualizado com sucesso!",
+    "PasswordChanged": "Senha alterada com sucesso!",
+    "EmailUpdated": "Email atualizado com sucesso!",
+    "ChangeEmail": "Alterar Email",
+    "NewEmail": "Novo Email",
+    "NewEmailPlaceholder": "novo@email.com",
+    "PasswordToConfirm": "Senha Atual (para confirmar)",
+    "Confirm": "Confirmar",
+    "Updating": "Atualizando...",
+    "DangerZone": "Zona de Perigo",
+    "DeleteAccount": "Excluir Conta Permanentemente",
+    "DeleteWarning": "Esta ação é <strong>IRREVERSÍVEL</strong>. Todos os seus dados serão permanentemente excluídos, incluindo:",
+    "DeleteItem1": "Todas as suas contas e saldos",
+    "DeleteItem2": "Todas as transações registradas",
+    "DeleteItem3": "Todas as categorias personalizadas",
+    "DeleteItem4": "Todos os orçamentos criados",
+    "DeleteItem5": "Todas as transações recorrentes",
+    "DeleteItem6": "Seu perfil e configurações",
+    "WantToDelete": "Quero Excluir Minha Conta",
+    "DeleteConfirmation": "Confirmação de Exclusão",
+    "CannotUndo": "Esta ação NÃO pode ser desfeita!",
+    "EnterPassword": "Digite sua senha para continuar:",
+    "PasswordPlaceholder": "Sua senha",
+    "TypeToConfirm": "Digite exatamente \"DELETAR MINHA CONTA\" para confirmar:",
+    "DeleteConfirmText": "DELETAR MINHA CONTA",
+    "UnderstandConsequences": "Eu entendo que esta ação é permanente e todos os meus dados serão excluídos",
+    "ConfirmDeletion": "Confirmar Exclusão Permanente",
+    "Deleting": "Excluindo..."
   },
   "Settings": {
     "PageTitle": "Configurações - MoneyManager",
     "Title": "Configurações",
+    "Subtitle": "Personalize sua experiência no MoneyManager",
     "General": "Geral",
     "Language": "Idioma",
     "LanguageSelector": "Seletor de Idioma",
     "Currency": "Moeda",
+    "CurrencyBRL": "Real Brasileiro (R$)",
+    "CurrencyUSD": "Dólar Americano (US$)",
+    "CurrencyEUR": "Euro (€)",
+    "DateFormat": "Formato de Data",
+    "DateFormatDDMMYYYY": "DD/MM/AAAA",
+    "DateFormatMMDDYYYY": "MM/DD/AAAA",
+    "DateFormatYYYYMMDD": "AAAA-MM-DD",
+    "MonthClosingDay": "Dia de Fechamento do Mês",
+    "MonthClosingDayHelp": "Dia em que o mês financeiro fecha para relatórios",
+    "DefaultBudget": "Orçamento Mensal Padrão (Opcional)",
+    "DefaultBudgetHelp": "Usado ao criar novos orçamentos",
+    "FinancialPreferences": "Preferências Financeiras",
     "Theme": "Tema",
     "Light": "Claro",
     "Dark": "Escuro",
+    "Auto": "Automático (Sistema)",
+    "ThemeHelp": "O tema escuro será implementado em versões futuras",
+    "PrimaryColor": "Cor Primária",
+    "Appearance": "Aparência",
     "Notifications": "Notificações",
     "EmailNotifications": "Notificações por Email",
+    "ReceiveEmailNotifications": "Receber notificações por email",
     "PushNotifications": "Notificações Push",
+    "RecurringProcessed": "Transação recorrente processada",
+    "BudgetAlert": "Alerta de orçamento",
+    "AlertWhenReaching": "Alertar quando atingir:",
+    "CreditLimitAlert": "Alerta de limite de cartão",
+    "MonthlySummary": "Resumo mensal por email",
     "Save": "Salvar",
+    "SaveSettings": "Salvar Configurações",
+    "Saving": "Salvando...",
+    "Reset": "Resetar",
     "Cancel": "Cancelar",
     "Loading": "Carregando configurações...",
     "ErrorLoading": "Erro ao carregar configurações: {0}",
