--- a/src/MoneyManager.Web/wwwroot/i18n/pt-BR.json
+++ b/src/MoneyManager.Web/wwwroot/i18n/pt-BR.json
@@ -277,6 +277,13 @@
     "RecurringTransactions": "Recorrentes",
     "Budgets": "Orçamentos",
     "Reports": "Relatórios",
+    "Dashboard": "Dashboard",
+    "Categories": "Categorias",
+    "Accounts": "Contas",
+    "Transactions": "Transações",
+    "RecurringTransactions": "Recorrentes",
+    "Budgets": "Orçamentos",
+    "Reports": "Relatórios",
     "Profile": "Meu Perfil",
     "Settings": "Configurações",
     "Logout": "Sair",
